# metier-server

./: CMakeLists.txt  README.md
.github/workflows/: compile.yml  format.yml  iwyu.yml
src/: CMakeLists.txt  main.cpp
src/metier_server/: CMakeLists.txt  main.cpp
tools/docker/: Dockerfile  README.md  compile  docker-bake.hcl  download  metier-server.conf  metier-server.sh  run
